remove dist/ files

--- a/v0.1/components/package.json
+++ b/v0.1/components/package.json
@@ -1,7 +1,7 @@
 {
   "main": "./dist/mod.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project ./tsconfig.json",
     "fmt": "prettier ./ --write"
   },
   "devDependencies": {
