--- a/v0.1/components/package.json
+++ b/v0.1/components/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "package.json",
   "main": "./dist/mod.js",
+  "type": "module",
   "scripts": {
     "build": "tsc --project ./tsconfig.json",
     "fmt": "prettier ./ --write"
@@ -7,5 +9,8 @@
   "devDependencies": {
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "controllers": "*"
   }
 }
