--- a/v0.1/components/tsconfig.json
+++ b/v0.1/components/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "module": "ESNext",
+    "module": "NodeNext",
     "target": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.iterable"],
     "strict": true,
