--- a/v0.1/package.json
+++ b/v0.1/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "a11y components",
   "workspaces": [
+  	"controllers",
     "components"
   ],
   "author": "taylor vann",
