remove catalog for generate_pages

--- a/catalog-rs/Cargo.toml
+++ b/catalog-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["catalog", "config", "generate_pages", "pages"]
+members = ["config", "generate_pages", "pages"]
 
 [workspace.dependencies]
 coyote = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1.0" }
