css components are cool

--- a/config.json
+++ b/config.json
@@ -2,5 +2,11 @@
     "pages": [
         ["home", "www/index.html"],
         ["checkbox", "www/checkbox/index.html"]
+    ],
+    "css_components": [
+        ["checkbox", "components/styles/checkbox.css"]
+    ],
+    "web_components": [
+        ["inline-focus", "components/js/inline-focus.js"]
     ]
 }
