--- a/wireframe-rs/Cargo.toml
+++ b/wireframe-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["config", "generate_pages", "pages"]
+members = [ "components","config", "generate_catalog", "catalog_pages", "generate_components"]
 
 [workspace.dependencies]
 coyote = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1.0" }
